src/content/blog/kubernetes-ground-up-routing/bookinfo-gateway-azure.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: bookinfo-gateway
  namespace: istio-system
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-health-probe-request-path: /productpage
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: bookinfo
  namespace: bookinfo # Assumes you are installing in namespace bookinfo: kubectl apply -n bookinfo -f samples/bookinfo/platform/kube/bookinfo.yaml
spec:
  parentRefs:
  - name: bookinfo-gateway
    namespace: istio-system

  rules:
  - matches:
    - path:
        type: Exact
        value: /productpage
    - path:
        type: PathPrefix
        value: /static
    - path:
        type: Exact
        value: /login
    - path:
        type: Exact
        value: /logout
    - path:
        type: PathPrefix
        value: /api/v1/products
    backendRefs:
    - name: productpage
      port: 9080
